examples/errors/weird_type.ign
<program>
  <var name=what type=doesNotExist>
    {2}
  </var>
</program>